--- a/views/album.ejs
+++ b/views/album.ejs
@@ -12,9 +12,9 @@
         <hr />
         <div id="complementary"></div>
             
-        
+        <h1>Stray Kids</h1>
+        <h1>Discography</h1>
         <img class= "album_img" style="display: block; -webkit-user-select: none;margin: auto;cursor: zoom-in;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="<%=album.images[0].url%>" width="150" height="150">
-   
         <h1 class="album_name"><%= album.name %></h1>
         <h2>Release Date: <%=album.release_date%></h2>
         <h2>Tracks</h2>
