--- a/views/info.ejs
+++ b/views/info.ejs
@@ -6,7 +6,7 @@
   <link href="../app.css" rel="stylesheet">
     </head>
     <body>
-            <h1>Stray Kids Info</h1>
+            <h1>Stray Kids</h1>
             <h1>Discography</h1>
         
             <canvas id="canvas"></canvas>
@@ -16,19 +16,22 @@
             
         
         <h2>Albums</h2>
-       
-        
+        <div id="albums">
             <% for(let i=0;i< locals.albums.length; i++){ %>
                <div class="album_div"> <h2><a href="/album"></a></h2>
                 <form method="POST" action="/album">
                     <input type= "hidden" name="album_id"  value=<%= locals.albums[i].id %>>
                     <input type="hidden"  name="access_token"  value=<%= locals.access_token %>>
-                    <button class="album" type="submit"><%=albums[i].name%></button>
+                    <button class="album" type="submit">
+                        <img class="img" style="display: block; -webkit-user-select: none;margin: auto;cursor: zoom-in;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="<%=albums[i].images[0].url%>" width="150" height="150">
+                        
+                    </button>
+                    <h3><%=albums[i].name%></h3>
                 </form>
-                <img class="img" style="display: block; -webkit-user-select: none;margin: auto;cursor: zoom-in;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="<%=albums[i].images[0].url%>" width="150" height="150">
+                
                </div>
                 <% } %>
-        
+            </div>
                 <script src="../image.js"></script>
     
                
