--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="../app.css" rel="stylesheet">
     </head>
     <body>
-        <h1>Hi</h1>
-        <h2 class="album_name">Name</h2>
+       <h2 class="album_name">Name</h2>
         <a href="/login">login</a>
         <a href="/access">access</a>
         <form action="/access" method="POST">
