--- a/views/track.ejs
+++ b/views/track.ejs
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="../app.css" rel="stylesheet">
     </head>
     <body>
         <img style="display: block; -webkit-user-select: none;margin: auto;cursor: zoom-in;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="<%=locals.track.album.images[0].url%>" width="150" height="150">
